# wai-middleware-ldap

./: .dockerignore  .gitignore  LICENSE  README.md  stack.yaml  wai-middleware-ldap.cabal
app/: Main.hs
docker/: Dockerfile  Dockerfile-build  build-image.sh
docker/test/: alexey.ldif  wai-ldap.yaml
src/Network/Wai/Middleware/Auth/: LDAP.hs
